--- a/deployment/Jenkinsfile
+++ b/deployment/Jenkinsfile
@@ -60,9 +60,9 @@ podTemplate(
                             --build-arg REACT_APP_MEMBER_URL="${props.react_app_member_url}" \
                             --build-arg REACT_APP_MYSUB_URL="${props.react_app_mysub_url}" \
                             --build-arg REACT_APP_RECOMMEND_URL="${props.react_app_recommend_url}" \
-                            --build-arg BUILD_FOLDER="container" \
+                            --build-arg BUILD_FOLDER="deployment" \
                             --build-arg EXPORT_PORT="${props.export_port}" \
-                            -f container/Dockerfile-lifesub-web \
+                            -f deployment/Dockerfile-lifesub-web \
                             -t ${imagePath} .
                         
                         podman push ${imagePath}
@@ -94,6 +94,12 @@ podTemplate(
                     
                     echo "Waiting for deployment to be ready..."
                     kubectl -n ${namespace} wait --for=condition=available deployment/lifesub-web --timeout=300s
+                    
+                    echo "Waiting for service external IP..."
+                    while [[ -z \$(kubectl -n ${namespace} get svc lifesub-web -o jsonpath='{.status.loadBalancer.ingress[0].ip}') ]]; do
+                        sleep 5
+                    done
+                    echo "Service external IP: \$(kubectl -n ${namespace} get svc lifesub-web -o jsonpath='{.status.loadBalancer.ingress[0].ip}')"
                 """
             }
         }
