--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -1,9 +1,9 @@
 name: Frontend CI/CD Pipeline
 
-on:
-  push:
-    branches: [ main ]
-
+# Temporarily disabled
+# on:
+#   push:
+#     branches: [ main ]
 env:
   PROJECT_FOLDER: "."
   BUILD_FOLDER: "deployment"
