--- a/deployment/Jenkinsfile
+++ b/deployment/Jenkinsfile
@@ -28,7 +28,7 @@ podTemplate(
         stage("Get Source") {
             checkout scm
             props = readProperties file: "deployment/deploy_env_vars"
-            namespace = "${props.teamid}-${props.root_project}-ns"
+            namespace = "${props.namespace}"
         }
 
         stage("Setup AKS") {
