--- a/deployment/deploy.yaml.template
+++ b/deployment/deploy.yaml.template
@@ -48,7 +48,8 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: backend-ingress
+  name: lifesub
+  namespace: ${namespace}
   annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/rewrite-target: /$2
